Change 'played' to 'started'
Changed the less obvious games 'played' to the more obvious 'games'
'started'.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div id='message'></div>
         </div>
         <div id='scoreboard' class='scoreboard hidden'>
-            <div id='games-played' class='score'></div>
+            <div id='games-started' class='score'></div>
             <div id='games-over' class='score'></div>
         </div>
         <div id='actions' class='actions hidden'>
